FIX - Promo panel .left-text-panel - image breaking with whitespace between tablet and mobile

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -169,7 +169,7 @@ $promo-max-width:   60em;
                         box-shadow: 0px 3px 6.86px 0.14px rgba(0, 0, 0, 0.21);
                         margin: 3em 1.1111em;
                         text-align: left;
-                        max-width: 55%;
+                        max-width: 65%;
                         position: relative;
                         padding: 2em;
 
@@ -217,6 +217,17 @@ $promo-max-width:   60em;
                         > div {
                             max-width: 85%;
                         }
+                    }
+                }
+
+                @include media($tablet) {
+                    img {
+                        height: 100%;
+                    }
+
+                    figcaption {
+                        padding-top: 0;
+                        padding-bottom: 0;
                     }
                 }
             }
